<resources>
    <string name="app_name">Task Manager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag_text">This is page Number </string>
    <string name="help_desc">Task Manager is a simple and easy to use app for managing your life. This app was developed to allow you to free your mind and stay productive. Task Manager also offers you an attractive and simple display</string>
    <string name="help_creating_task">Enter the title of the task in the space provided and select a priority level. Click on the button with a \'Plus\' sign to create the task</string>
    <string name="help_edit_task">Click on the task you want to edit. Enter a new title or choose a different priority level. Click on the button with a \'Plus\' sign to save changes</string>
    <string name="help_remove_task">Press and hold on the task you want to remove. Select the option of \'Remove\' on the message that pops up</string>
    <string name="help">Help</string>
    <string name="tvTask">Task:</string>
    <string name="etTitle">Enter Title</string>
    <string name="tvPriority">Priority:</string>
    <string name="radioHigh">High</string>
    <string name="radioLow">Low</string>
</resources>
