<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        android:id="@+id/appBar2"
        layout="@layout/app_bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/help_desc"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        android:text="Create a Task"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        android:text="@string/help_creating_task"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        android:text="Edit a Task"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        android:text="@string/help_edit_task"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        android:text="Remove a Task"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        android:text="@string/help_remove_task"
        />


    <!--
    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:background="@color/primaryColor"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:tabGravity="fill"
        app:tabTextAppearance="@style/TextAppearance.Design.Tab"
        app:tabSelectedTextColor="@color/accentColor"
        app:tabMode="fixed" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1" />

    -->
</LinearLayout>
