<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/appBar2"
        layout="@layout/app_bar" />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="16dp"
        android:background="@android:color/white"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

            <TextView
                android:id="@+id/tvTtl"
                android:text="@string/tvTask"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEdit"
                android:inputType="textCapSentences"
                android:layout_below="@+id/tvTtl"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/tvPriority"
                android:layout_alignParentBottom="true"
                android:gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/tvPriority"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <RadioGroup
                android:id="@+id/pr"
                android:layout_alignParentBottom="true"
                android:gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tvPriority"
                android:layout_toRightOf="@+id/tvPriority">

                <RadioButton
                    android:id="@+id/radioHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioHigh" />

                <RadioButton
                    android:id="@+id/radioLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radioLow" />
            </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rLay2"
        android:background="@color/primaryColor"
        android:layout_weight="4.5"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageButton
            android:background="@mipmap/ic_save"
            android:layout_marginRight="24dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/ibUpdate"
            android:contentDescription="@null" />

        <ImageButton
            android:background="@mipmap/ic_share"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/ibShare"
            android:layout_alignTop="@+id/ibUpdate"
            android:layout_toEndOf="@+id/ibUpdate" />

    </RelativeLayout>

</LinearLayout>